Fix footer z-index when on overlay mode to show above sidebar (#404)

--- a/Angular/src/app/shared/bia-shared/components/layout/ultima/footer/ultima-footer.component.scss
+++ b/Angular/src/app/shared/bia-shared/components/layout/ultima/footer/ultima-footer.component.scss
@@ -2,7 +2,6 @@
 
 :host {
   // Warning any change to this area will affect custom footer
-  z-index: 1;
   display: flex;
   // ----
   .copyright {
